--- a/WSUI.Module/Service/ResourceTemplate.xaml
+++ b/WSUI.Module/Service/ResourceTemplate.xaml
@@ -15,6 +15,38 @@
     <service:ObjectToNameConverter x:Key="objectConverter" />
     <service:ActualWidthToWidthConverter x:Key="ActualWidthConverter" />
     <converters:StringToStringConverter x:Key="StringConverter" />
+    <service:IntToVisibilityConverter x:Key="IntToVisibilityConverter"></service:IntToVisibilityConverter>
+
+    <Style TargetType="ToolTip">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ToolTip" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:mwt="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero">
+                    <mwt:SystemDropShadowChrome Color="#00FFFFFF" CornerRadius="2,2,2,2" Name="Shdw" SnapsToDevicePixels="True">
+                        <Border BorderThickness="{TemplateBinding Border.BorderThickness}" Padding="{TemplateBinding Control.Padding}" CornerRadius="2,2,2,2" BorderBrush="{TemplateBinding Border.BorderBrush}" Background="{TemplateBinding Panel.Background}">
+                            <ContentPresenter Content="{TemplateBinding ContentControl.Content}" ContentTemplate="{TemplateBinding ContentControl.ContentTemplate}" ContentStringFormat="{TemplateBinding ContentControl.ContentStringFormat}" HorizontalAlignment="{TemplateBinding Control.HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding Control.VerticalContentAlignment}" SnapsToDevicePixels="{TemplateBinding UIElement.SnapsToDevicePixels}" />
+                        </Border>
+                    </mwt:SystemDropShadowChrome>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="ToolTipService.HasDropShadow">
+                            <Setter TargetName="Shdw" Property="FrameworkElement.Margin">
+                                <Setter.Value>
+                                    <Thickness>0,0,5,5</Thickness>
+                                </Setter.Value>
+                            </Setter>
+                            <Setter TargetName="Shdw" Property="mwt:SystemDropShadowChrome.Color">
+                                <Setter.Value>
+                                    <Color>#71000000</Color>
+                                </Setter.Value>
+                            </Setter>
+                            <Trigger.Value>
+                                <s:Boolean>True</s:Boolean>
+                            </Trigger.Value>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 
     <Style x:Key="ImageStyle" TargetType="{x:Type Image}">
         <Setter Property="Width" Value="16" />
@@ -46,7 +78,7 @@
     </Style>
 
     <Style x:Key="CountStyleWidthColumn" TargetType="ColumnDefinition">
-        <Setter Property="Width" Value="30" />
+        <Setter Property="Width" Value="Auto" />
     </Style>
 
     <Style x:Key="SubjectStyleWidthColumn" TargetType="ColumnDefinition">
@@ -146,7 +178,17 @@
                                     </Grid.RowDefinitions>
                                     <Grid.ToolTip>
                                         <StackPanel Orientation="Vertical">
-                                            <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />
+                                            <StackPanel Orientation="Horizontal">
+                                                <TextBlock Text="Received: "></TextBlock>
+                                                <TextBlock Text="{Binding Path=DateReceived,Converter={StaticResource dateConverter}}"></TextBlock>
+                                            </StackPanel>
+                                            <StackPanel Orientation="Horizontal">
+                                                <TextBlock Text="Subject: "></TextBlock>
+                                                <TextBlock Text="{Binding Path=ItemName}"></TextBlock>
+                                            </StackPanel>
+                                            <StackPanel Orientation="Horizontal">
+                                                <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />
+                                            </StackPanel>
                                         </StackPanel>
                                     </Grid.ToolTip>
 
@@ -184,14 +226,11 @@
 
                 <Image Style="{StaticResource ImageStyle}" Grid.Column="0" Source="..\Images\document-smiley-sad.png" />
 
-                
                 <TextBlock Grid.Column="1" Margin="5" TextWrapping="Wrap">
                     <Run>Search for "</Run>
                     <Run Text="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" FontWeight="Bold"></Run>
                     <Run>" returned no matches. Try different keywords.</Run>
                 </TextBlock>
-
-
         </Grid>
         </DataTemplate>
 
@@ -210,7 +249,17 @@
                 </Grid.RowDefinitions>
                 <Grid.ToolTip>
                     <StackPanel Orientation="Vertical">
-                        <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="Received: "></TextBlock>
+                            <TextBlock Text="{Binding Path=DateReceived,Converter={StaticResource dateConverter}}"></TextBlock>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="Subject: "></TextBlock>
+                            <TextBlock Text="{Binding Path=ItemName}"></TextBlock>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />
+                        </StackPanel>
                     </StackPanel>
                 </Grid.ToolTip>
 
@@ -233,11 +282,6 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <Grid.ToolTip>
-                    <StackPanel Orientation="Vertical">
-                        <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />
-                    </StackPanel>
-                </Grid.ToolTip>
                 <Expander Style="{StaticResource EmailExpanderStyle}" Grid.Column="0" Margin="0" ExpandDirection="Down">
                     <Grid>
                         <ListBox ItemsSource="{Binding Items}" ItemTemplate="{StaticResource EmailItemTemplate}" Style="{StaticResource ListBoxExpanderStyle}">
@@ -262,11 +306,9 @@
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
                 <Grid.ToolTip>
-                    <ToolTip>
-                        <StackPanel Orientation="Vertical">
-                            <TextBlock Text="{Binding Path=Tag}" />
-                        </StackPanel>
-                    </ToolTip>
+                    <StackPanel Orientation="Vertical">
+                        <TextBlock Text="{Binding Path=Tag}" />
+                    </StackPanel>
                 </Grid.ToolTip>
                 <Image Style="{StaticResource ImageStyle}" Grid.Column="1" Source="..\Images\user.png" />
                 <ctrl:HightliteHyperlink Grid.Column="2" Margin="5" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Converter={StaticResource objectConverter}}">
@@ -292,20 +334,30 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="16" />
                     <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Style="{StaticResource ResourceKey=CountStyleWidthColumn}" />
+                    <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
                 <Grid.ToolTip>
                     <StackPanel Orientation="Vertical">
-                        <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="Date created: "></TextBlock>
+                            <TextBlock Text="{Binding Path=DateCreated,Converter={StaticResource dateConverter}}"></TextBlock>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="Name: "></TextBlock>
+                            <TextBlock Text="{Binding ItemName}"></TextBlock>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />    
+                        </StackPanel>
                     </StackPanel>
                 </Grid.ToolTip>
-
                 <Image Style="{StaticResource ImageStyle}" Grid.Column="1" Source="{Binding Path=ItemName,Converter={StaticResource ResourceKey=nameConverter}}" />
-                <TextBlock Grid.Column="2" Margin="5" FontWeight="Bold" Foreground="Red" Text="{Binding Count,Converter={StaticResource countConverter}}"></TextBlock>
-                <ctrl:HightliteTextBlock Grid.Column="3" Grid.ColumnSpan="2" Margin="5" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName}" />
+                <TextBlock Grid.Column="2" Margin="2 5 2 5" FontWeight="Bold" Foreground="Red" Text="{Binding Count,Converter={StaticResource countConverter}}"
+                           Visibility="{Binding Count, Converter={StaticResource IntToVisibilityConverter}}"></TextBlock>
+                <ctrl:HightliteTextBlock Grid.Column="3" Grid.ColumnSpan="2" Margin="2 5 5 5" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName}" />
 
                 <TextBlock Grid.Column="5" Margin="5" Foreground="Black" Text="{Binding Path=DateCreated,Converter={StaticResource dateConverter}}" />
 
@@ -320,20 +372,31 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="16" />
                     <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Style="{StaticResource ResourceKey=CountStyleWidthColumn}" />
+                    <ColumnDefinition Width="Auto" />
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
                 <Grid.ToolTip>
-                    <StackPanel Orientation="Vertical">
-                        <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />
+                   <StackPanel Orientation="Vertical">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="Date received: "></TextBlock>
+                            <TextBlock Text="{Binding Path=DateReceived,Converter={StaticResource dateConverter}}"></TextBlock>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="Name: "></TextBlock>
+                            <TextBlock Text="{Binding ItemName}"></TextBlock>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />    
+                        </StackPanel>
                     </StackPanel>
                 </Grid.ToolTip>
 
                 <Image Style="{StaticResource ImageStyle}" Grid.Column="1" Source="{Binding Path=ItemUrl,Converter={StaticResource ResourceKey=nameConverter}}" />
-                <TextBlock Grid.Column="2" Margin="5" FontWeight="Bold" Foreground="Red" Text="{Binding Count,Converter={StaticResource countConverter}}"></TextBlock>
-                <ctrl:HightliteTextBlock Grid.Column="3" Grid.ColumnSpan="2" Margin="5" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName}" />
+                <TextBlock Grid.Column="2" Margin="2 5 2 5" FontWeight="Bold" Foreground="Red" Text="{Binding Count,Converter={StaticResource countConverter}}"
+                           Visibility="{Binding Count, Converter={StaticResource IntToVisibilityConverter}}"></TextBlock>
+                <ctrl:HightliteTextBlock Grid.Column="3" Grid.ColumnSpan="2" Margin="2 5 5 5" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName}" />
                 <TextBlock Grid.Column="5" Margin="5" Foreground="Black" Text="{Binding Path=DateReceived,Converter={StaticResource dateConverter}}" />
 
                 <i:Interaction.Behaviors>
@@ -353,7 +416,7 @@
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
                 <Image Style="{StaticResource ImageStyle}" Grid.Column="1" Source="..\Images\date.png" />
-                <TextBlock Grid.Column="2" Margin="5" FontWeight="Bold" Foreground="Red" Text="{Binding Count,Converter={StaticResource countConverter}}"></TextBlock>
+                <TextBlock Grid.Column="2" Margin="2 5 2 5" FontWeight="Bold" Foreground="Red" Text="{Binding Count,Converter={StaticResource countConverter}}"></TextBlock>
                 <ctrl:HightliteTextBlock Grid.Column="3" Margin="5" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName}" />
                 <TextBlock Grid.Column="4" Margin="5" Foreground="Black" Text="{Binding Path=DateModified,Converter={StaticResource dateConverter}}" />
 
@@ -373,12 +436,22 @@
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
                 <Grid.ToolTip>
-                    <StackPanel Orientation="Vertical">
-                        <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />
+                     <StackPanel Orientation="Vertical">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="Date created: "></TextBlock>
+                            <TextBlock Text="{Binding Path=DateCreated,Converter={StaticResource dateConverter}}"></TextBlock>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="Name: "></TextBlock>
+                            <TextBlock Text="{Binding ItemName}"></TextBlock>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding Path=Size, Converter={StaticResource sizeConverter}}" />    
+                        </StackPanel>
                     </StackPanel>
                 </Grid.ToolTip>
                 <Image Style="{StaticResource ImageStyle}" Grid.Column="1" Source="..\Images\pictures.png" />
-                <TextBlock Grid.Column="2" Margin="5" FontWeight="Bold" Foreground="Red" Text="{Binding Count,Converter={StaticResource countConverter}}"></TextBlock>
+                <TextBlock Grid.Column="2" Margin="2 5 2 5" FontWeight="Bold" Foreground="Red" Text="{Binding Count,Converter={StaticResource countConverter}}"></TextBlock>
                 <ctrl:HightliteTextBlock Grid.Column="3" Margin="5" Hightlight="{Binding Path=DataContext.SearchString,Mode=OneTime,ElementName=this}" Text="{Binding Path=ItemName}" />
                 <TextBlock Grid.Column="4" Margin="5" Foreground="Black" Text="{Binding Path=DateCreated,Converter={StaticResource dateConverter}}" />
                 <i:Interaction.Behaviors>
@@ -554,8 +627,8 @@
                             <Setter Property="Foreground" Value="{StaticResource AccentSelectedColorBrush}" />
                             <Setter TargetName="IconPath" Property="Fill" Value="White"></Setter>
                         </Trigger>
-                        
-                        <MultiTrigger >
+
+                        <MultiTrigger>
                             <MultiTrigger.Conditions>
                                 <Condition Property="IsMouseOver" Value="True"></Condition>
                                 <Condition Property="IsSelected" Value="False"></Condition>
@@ -566,7 +639,7 @@
                                 </Setter.Value>
                             </Setter>
                         </MultiTrigger>
-                        
+
                         <Trigger Property="IsEnabled" Value="False">
                             <Setter Property="Foreground" Value="{StaticResource GrayBrush5}" />
                         </Trigger>
@@ -629,13 +702,13 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
-                    <Border Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" >
+                    <Border Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}">
                         <Border.ToolTip>
                             <StackPanel Orientation="Vertical">
                                 <TextBlock Text="{TemplateBinding Content}" />
                             </StackPanel>
                         </Border.ToolTip>
-                        <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                        <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
@@ -651,5 +724,4 @@
             </Trigger>
         </Style.Triggers>
     </Style>
-
 </ResourceDictionary>
